# dice

./: pyproject.toml
.github/workflows/: ci.yml
src/dice/: cli.py  engine.py  models.py
tests/: test_engine.py
