[project]
name = "dice"
version = "0.1.2"
description = "A Skywalker-grade CLI dice rolling tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.3",
    "pydantic>=2.7.4",
    "rich>=13.7.1",
]

[project.scripts]
dice = "dice.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true